# Shopify-Starter-Templates

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
components/: cta.html  faq.html  features.html  footer.html  header.html  hero.html  newsletter.html  pricing.html  testimonials.html
dropship-starter/: index.html
landing-product/: index.html
minimal-store/: index.html
shared/scripts/: ab-testing.js  theme-switcher.js
shared/styles/: theme.css
tests/: test_seo.py  test_templates.py  test_tools.py
tools/: cli.py  compare.py  performance.py
