[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopify-starter-templates"
version = "3.0.0"
description = "Production-ready Shopify/e-commerce starter templates with generator CLI, SEO validation, and A/B testing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "platoba"}]
keywords = ["shopify", "ecommerce", "templates", "storefront", "dropshipping", "landing-page", "tailwind"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
shopify-templates = "tools.cli:main"

[project.urls]
Homepage = "https://github.com/platoba/Shopify-Starter-Templates"
Repository = "https://github.com/platoba/Shopify-Starter-Templates"
Issues = "https://github.com/platoba/Shopify-Starter-Templates/issues"

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
